Add autoload segment to composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     },
     "archive": {
         "exclude": ["/development"]
+    },
+    "autoload" : {
+        "classmap" : ["simpleschema/src"]
     }
 }
